src/sass/pages/static.scss
.static_full {
    @include topspace;
    .sidebar {
      @include menu-left;
    }
    @include section-separator;
    .section {
        display: block;
        overflow: hidden;
        .section-content {
            #section-1, #section-2, #section-3, #section-4, #section-5, #section-6 {
                .heading {
                    font-weight: bold;
                    color: $COLOR_BLUE;
                }
            }
        }
    }
    .sidebar-button {
        background: $COLOR_LIGHT_GRAY;
        padding: 20px;
        a {
            @include link-button;
            display: block;
        }
    }
    .code-sample {
        background-color: $COLOR_LIGHT_GRAY;
        overflow-x: auto;
        width: 90%;
        font-family: monospace;
        white-space: pre;
        padding: 18px;
    }
    .faded {
        color: #AFAFAF;
        font-size: 95%;
    }
    .grd-grid-hide {
        padding: 0;
    }
}

